--- a/autograph_test/requirements.txt
+++ b/autograph_test/requirements.txt
@@ -1,4 +1,9 @@
 Django==1.5.1
 South==0.8.1
-autograph==1.0.0
+dj-database-url==0.2.2
+dj-static==0.0.5
+gunicorn==17.5
 pil==1.1.7
+psycopg2==2.5.1
+static==0.4
+wsgiref==0.1.2
